add sample Vue component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <span id="nextTodo"></span>
       <span id="todoCount"></span>
     </div>
+    <div id="sample"></div>
     <script src="./dist/main.js"></script>
   </body>
 </html>
